--- a/templates/base.html
+++ b/templates/base.html
@@ -2,28 +2,65 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Rango</title>
+    <meta http-equiv="X-UA-COMPATIBLE" content="IE=edge">
+    <meta name="viewport" content="width=device-width,initial-scale=1">
+    <meta name="description" content="">
+    <meta name="author" content="">
+    <link rel="icon" href="http://getbootstrap.com/favicon.ico">
+
+    <title>Rango - {% block title %}How to Tango with Django{% endblock %}</title>
+
+    <link href="http://getbootstrap.com/dist/css/bootstrap.min.css" rel="stylesheet">
+    <link href="http://getbootstrap.com/examples/dashboard/dashboard.css" rel="stylesheet">
+
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.1/jquery.min.js"></script>
+    <script src="http://getbootstrap.com/dist/js/bootstrap.min.js"></script>
+    <script src="http://getbootstrap.com/assets/js/ie10-viewport-bug-workaround.js"></script>
+    {% load staticfiles %}
+    <!--<script scr="{% static "js/jquery-1.11.1.js"%}"></script>-->
+    <script src="{% static "js/rango-jquery.js" %}"></script>
 </head>
 <body>
-    <div>
-        {% block body_block %}{% endblock %}
+<div class="navbar navbar-inverse navbar-fixed-top" role="navigation">
+    <div class="container-fluid">
+        <div class="navbar-header">
+            <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target=".navbar-collapse">
+                <span class="sr-only">Toggle navigation</span>
+                <span class="icon-bar"></span>
+                <span class="icon-bar"></span>
+                <span class="icon-bar"></span>
+            </button>
+            <a class="navbar-brand" href="/rango">Rango</a>
+        </div>
+        <div class="navbar-collapse collapse">
+            <ul class="nav navbar-nav navbar-right">
+                <li><a href="{% url 'index' %}">Home</a></li>
+                {% if user.is_authenticated %}
+                    <li><a href="{% url 'restricted' %}">Restricted Page</a></li>
+                    <li><a href="{% url 'auth_logout' %}?next=/rango/">Logout</a></li>
+                    <li><a href="{% url 'add_category' %}">Add a New Category</a></li>
+                {% else %}
+                    <li><a href="{% url 'registration_register' %}">Register Here</a></li>
+                    <li><a href="{% url 'auth_login' %}">Login</a></li>
+                {% endif %}
+                <li><a href="{% url 'about' %}">About</a></li>
+            </ul>
+        </div>
     </div>
+</div>
 
-    <hr/>
-
-    <div>
-        <ul>
-        {% if user.is_authenticated %}
-            <li><a href="/rango/restricted/">Resticted Page</a></li>
-            <li><a href="/rango/logout/">Logout</a></li>
-            <li><a href="/rango/add_category/">Add a new Category</a></li>
-        {% else %}
-            <li><a href="/rango/register/">Register Here</a></li>
-            <li><a href="/rango/login/">Login</a></li>
-         {% endif %}
-
-            <li><a href="/rango/about/">About</a></li>
-        </ul>
+<div class="container-fluid">
+    <div class="row">
+        <div class="col-sm-3 col-md-2 sidebar">
+            {% block side_block %}
+                {% load rango_extras %}
+                {% get_category_list category %}
+            {% endblock %}
+        </div>
+        <div class="col-sm-9 col-sm-offset-3 col-md-10 col-md-offset-2 main">
+            {% block body_block %}{% endblock %}
+        </div>
+    </div>
     </div>
 </body>
 </html>
