--- a/templates/rango/index.html
+++ b/templates/rango/index.html
@@ -2,16 +2,43 @@
 
 {% load staticfiles %}
 
-{% block title %}Welcome to Rango!{% endblock %}
+{% block title %}Index{% endblock %}
 
 {% block body_block %}
-        {% if categories %}
-        	<ul>
-        		{% for category in categories %}
-        		<li><a href="{% url 'category' category.slug %}">{{ category.name }}</a></li>
-        		{% endfor %}
-        	</ul>
-        {% else %}
-        	<strong>There are no category present.</strong>
-        {% endif %}
+    {% if user.is_authenticated %}
+        <div class="page-header">
+        <h1>Rango says... hello {{ user.username }}!</h1>
+    {% else %}
+        <h1>Rango says... hell World!</h1>
+    {% endif %}
+</div>
+    <div class="row placeholders">
+        <div class="col-xs-12 col-sm-6 placeholder">
+            <h4>Categories</h4>
+            {% if categories %}
+                <ul class="list-group">
+                    {% for category in categories %}
+                        <li class="list-group-item"><a href="{% url 'category' category.slug %}">{{ category.name }}</a>
+                        </li>
+                    {% endfor %}
+                </ul>
+            {% else %}
+                <strong>There are no categories present.</strong>
+            {% endif %}
+        </div>
+        <div class="col-xs-12 col-sm-6 placeholder">
+            <h4>Pages</h4>
+            {% if pages %}
+                <ul class="list-group">
+                    {% for page in pages %}
+                        <li class="list-group-item"><a href="{{ page.url }}">{{ page.title }}</a></li>
+                    {% endfor %}
+                </ul>
+            {% else %}
+                <strong>There are no pages present.</strong>
+            {% endif %}
+        </div>
+    </div>
+    <p>visits:{{ visits }}</p>
+
 {% endblock %}
