--- a/templates/registration/login.html
+++ b/templates/registration/login.html
@@ -7,18 +7,18 @@
 
 {% block body_block %}
     <link href="http://getbootstrap.com/examples/signin/signin.css" rel="stylesheet">
-        <h1>Login to Rango</h1>
+    <h1>Login to Rango</h1>
 
-    <form class="form-signin" role="form" method="post" action="/rango/login/">
-            {% csrf_token %}
+    <form class="form-signin" role="form" method="post" action=".">
+        {% csrf_token %}
         <h2 class="form-signin-heading">Please sign in</h2>
         Username: <input class="form-control" placeholder="Username" id="id_username" maxlength="254"
                          type="text" name="username" required autofocus=""/>
-            <br />
+        <br/>
         Password: <input type="password" required name="password" class="form-control" placeholder="Password"
                          id="id_password"/>
-            <br />
+        <br/>
 
         <button class="btn btn-lg btn-primary btn-block" type="submit" value="submit">Sign in</button>
-        </form>
+    </form>
 {% endblock %}
